--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bcrypt": "5.1.0",
     "body-parser": "1.20.2",
     "cors": "2.8.5",
+    "cron": "^2.3.1",
     "dotenv": "^16.3.1",
     "express": "^4.17.1",
     "install": "^0.13.0",
